<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.RegisterActivity"
        android:background="@drawable/bgdesign">

    <EditText
            android:layout_width="266dp"
            android:layout_height="45dp"
            android:inputType="textPersonName"
            android:hint="@string/enter_name"
            android:ems="10"
            android:id="@+id/name"
            android:paddingLeft="10dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.143"
            android:background="@drawable/edittext_design"/>
    <EditText
            android:paddingLeft="10dp"
            android:layout_width="270dp"
            android:background="@drawable/edittext_design"
            android:layout_height="48dp"
            android:inputType="textEmailAddress"
            android:hint="@string/enter_email_address"
            android:ems="10"
            android:id="@+id/email"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.293"/>
    <EditText
            android:layout_width="269dp"
            android:layout_height="49dp"
            android:background="@drawable/edittext_design"
            android:inputType="textPassword"
            android:ems="10"
            android:paddingLeft="10dp"
            android:hint="@string/enter_password"
            android:id="@+id/password"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.442"/>
    <EditText
            android:layout_width="263dp"
            android:background="@drawable/edittext_design"
            android:layout_height="48dp"
            android:inputType="phone"
            android:ems="10"
            android:hint="@string/enter_phone_number"
            android:paddingLeft="10dp"
            android:id="@+id/phnNO"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.584"/>
    <Button
            android:text="@string/submit"
            android:layout_width="146dp"
            android:layout_height="51dp"
            android:id="@+id/submit"
            android:background="@drawable/loginbuttondesign" android:textColor="#FFFFFF"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.748" android:textSize="20sp"/>
    <TextView
            android:text="@string/already_registered_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/alreadyRegistered" android:textSize="20sp"
            android:textColor="#000"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0.496" app:layout_constraintVertical_bias="0.928"
            android:textStyle="bold"/>
</android.support.constraint.ConstraintLayout>